--- a/index.ipynb
+++ b/index.ipynb
@@ -122,8 +122,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T09:00:41.074076Z",
-     "start_time": "2021-10-11T09:00:40.251772Z"
+     "end_time": "2021-10-16T06:53:45.919160Z",
+     "start_time": "2021-10-16T06:53:44.988484Z"
     }
    },
    "outputs": [],
@@ -146,8 +146,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T09:00:44.553932Z",
-     "start_time": "2021-10-11T09:00:44.518608Z"
+     "end_time": "2021-10-16T06:53:45.966192Z",
+     "start_time": "2021-10-16T06:53:45.922179Z"
     }
    },
    "outputs": [],
@@ -168,8 +168,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T09:00:49.445770Z",
-     "start_time": "2021-10-11T09:00:49.432772Z"
+     "end_time": "2021-10-16T06:53:45.982180Z",
+     "start_time": "2021-10-16T06:53:45.969179Z"
     }
    },
    "outputs": [],
@@ -199,8 +199,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T09:00:53.305901Z",
-     "start_time": "2021-10-11T09:00:53.253891Z"
+     "end_time": "2021-10-16T06:53:46.045988Z",
+     "start_time": "2021-10-16T06:53:45.985182Z"
     }
    },
    "outputs": [
@@ -603,8 +603,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T09:00:56.981854Z",
-     "start_time": "2021-10-11T09:00:56.954829Z"
+     "end_time": "2021-10-16T06:53:46.077992Z",
+     "start_time": "2021-10-16T06:53:46.047985Z"
     }
    },
    "outputs": [
@@ -732,8 +732,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T09:01:15.019910Z",
-     "start_time": "2021-10-11T09:01:14.696839Z"
+     "end_time": "2021-10-16T06:53:46.459682Z",
+     "start_time": "2021-10-16T06:53:46.079993Z"
     }
    },
    "outputs": [
@@ -781,8 +781,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T09:01:19.355420Z",
-     "start_time": "2021-10-11T09:01:19.332416Z"
+     "end_time": "2021-10-16T06:53:46.475683Z",
+     "start_time": "2021-10-16T06:53:46.462684Z"
     }
    },
    "outputs": [
@@ -814,9 +814,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-16T06:53:46.491687Z",
+     "start_time": "2021-10-16T06:53:46.480685Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nFairly normal looking distribution, but definitely skewed \\ntowards higher sales prices by high value outliers.\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
@@ -839,8 +855,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-10T23:48:14.147082Z",
-     "start_time": "2021-10-10T23:48:13.547785Z"
+     "end_time": "2021-10-16T06:53:46.792975Z",
+     "start_time": "2021-10-16T06:53:46.494691Z"
     }
    },
    "outputs": [
@@ -878,8 +894,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-10T23:48:33.202963Z",
-     "start_time": "2021-10-10T23:48:33.191004Z"
+     "end_time": "2021-10-16T06:53:46.808970Z",
+     "start_time": "2021-10-16T06:53:46.794971Z"
     }
    },
    "outputs": [
@@ -907,9 +923,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-16T06:53:46.824976Z",
+     "start_time": "2021-10-16T06:53:46.812973Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nNormally distributed, roughly. Mean and median close in value.\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
@@ -931,8 +963,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-10T23:49:50.729060Z",
-     "start_time": "2021-10-10T23:49:50.084945Z"
+     "end_time": "2021-10-16T06:53:47.155327Z",
+     "start_time": "2021-10-16T06:53:46.827977Z"
     }
    },
    "outputs": [
@@ -970,8 +1002,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-10T23:50:08.512079Z",
-     "start_time": "2021-10-10T23:50:08.496110Z"
+     "end_time": "2021-10-16T06:53:47.171331Z",
+     "start_time": "2021-10-16T06:53:47.159328Z"
     }
    },
    "outputs": [
@@ -999,9 +1031,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-16T06:53:47.187336Z",
+     "start_time": "2021-10-16T06:53:47.173331Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nAlso pretty much normally distributed. But this data isn't continuous,\\nit's discrete. So it's probably best considered categorical.\\n\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
@@ -1029,11 +1077,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T01:52:18.328487Z",
-     "start_time": "2021-10-11T01:52:18.289477Z"
+     "end_time": "2021-10-16T06:53:47.203349Z",
+     "start_time": "2021-10-16T06:53:47.189336Z"
     }
    },
    "outputs": [],
@@ -1053,11 +1101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T01:52:20.473866Z",
-     "start_time": "2021-10-11T01:52:20.454313Z"
+     "end_time": "2021-10-16T06:53:47.219446Z",
+     "start_time": "2021-10-16T06:53:47.205349Z"
     }
    },
    "outputs": [],
@@ -1084,11 +1132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T01:52:26.303714Z",
-     "start_time": "2021-10-11T01:52:24.557868Z"
+     "end_time": "2021-10-16T06:53:48.170319Z",
+     "start_time": "2021-10-16T06:53:47.221444Z"
     }
    },
    "outputs": [
@@ -1154,9 +1202,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-16T06:53:48.185844Z",
+     "start_time": "2021-10-16T06:53:48.171843Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nIt's surprising that average condition homes appear to command\\nhigh sales prices than even above average condition. \\n\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
@@ -1182,11 +1246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T02:10:52.199745Z",
-     "start_time": "2021-10-11T02:10:52.163711Z"
+     "end_time": "2021-10-16T06:53:48.201848Z",
+     "start_time": "2021-10-16T06:53:48.188844Z"
     }
    },
    "outputs": [
@@ -1218,11 +1282,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T03:04:03.452406Z",
-     "start_time": "2021-10-11T03:04:03.444403Z"
+     "end_time": "2021-10-16T06:53:48.217851Z",
+     "start_time": "2021-10-16T06:53:48.203848Z"
     }
    },
    "outputs": [
@@ -1253,11 +1317,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T03:08:28.739143Z",
-     "start_time": "2021-10-11T03:08:25.783092Z"
+     "end_time": "2021-10-16T06:53:49.700800Z",
+     "start_time": "2021-10-16T06:53:48.219852Z"
     }
    },
    "outputs": [
@@ -1312,13 +1376,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-16T06:53:49.716806Z",
+     "start_time": "2021-10-16T06:53:49.702801Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nOverall quality clearly tracks with sale price, while number of kitchens \\njust doesn't make much sense as a feature.\\n\""
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
-    "None\n",
+    "Overall quality clearly tracks with sale price, while number of kitchens \n",
+    "just doesn't make much sense as a feature.\n",
     "\"\"\""
    ]
   },
@@ -1335,11 +1416,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T03:08:55.871937Z",
-     "start_time": "2021-10-11T03:08:55.851937Z"
+     "end_time": "2021-10-16T06:53:49.732807Z",
+     "start_time": "2021-10-16T06:53:49.723804Z"
     }
    },
    "outputs": [
@@ -1354,7 +1435,7 @@
        "Name: YrSold, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,11 +1454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T03:09:09.713453Z",
-     "start_time": "2021-10-11T03:09:09.188892Z"
+     "end_time": "2021-10-16T06:53:50.019539Z",
+     "start_time": "2021-10-16T06:53:49.735808Z"
     }
    },
    "outputs": [
@@ -1419,13 +1500,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-16T06:53:50.034541Z",
+     "start_time": "2021-10-16T06:53:50.021537Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nRecently built homes tend to command higher prices, but the overall spread of prices is much\\nwider. Older homes tend to coalesce around a cheaper lower threshold.\\n'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
-    "None\n",
+    "Recently built homes tend to command higher prices, but the overall spread of prices is much\n",
+    "wider. Older homes tend to coalesce around a cheaper lower threshold.\n",
     "\"\"\""
    ]
   },
